# mcp-sandtimer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
include/mcp_sandtimer/: Json.h  Logger.h  MCPSandTimerServer.h  TimerClient.h  ToolDefinition.h  Version.h.in
src/: Json.cpp  Logger.cpp  MCPSandTimerServer.cpp  TimerClient.cpp  ToolDefinition.cpp  main.cpp
tests/: tool_definition_test.cpp
